pre ~ 01.02.22 @ 22:12PM - [Responsive Bug Fix & Additional Media Query] - fixed half window laptop breaking site widths & added media query for low res tablets & landscape tablets

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -8,9 +8,15 @@
 
 }
 
+/* ! small laptops & large tablets */
+
+@media only screen and (min-width : 1024px) and (max-width : 1224px) {
+  
+}
+
 /* ! iPads (portrait and landscape) */
 
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+@media only screen and (min-width : 768px) and (max-width : 1024px) {
   
   /* general */
 
@@ -104,14 +110,178 @@
 
 /* ! low-res tablets & landscape mobile */
 
-@media (min-width: 481px) and (max-width: 767px) {
+@media (min-width: 480px) and (max-width: 768px) {
+
+  /* general */
+
+  .heading {
+    margin: 15px 0;
+  }
+
+  .heading i {
+    font-size: 1.5em;
+  }
+
+  .heading h3 {
+    font-size: 1.9em;
+  }
+
+  /* nav menu */
+
+  nav ul.left img {
+    margin: 5px 5px -1.8px 5px;
+  }
+
+  nav ul.right {
+    display: none;
+  }
+
+  /* head */
+
+  .head {
+    margin-top: 80px;
+    padding: 7.5%;
+  }
+
+  .head [role="doc-subtitle"] {
+    width: auto;
+    text-align: center;
+    font-size: 0.8em;
+  }
+
+  h1.myName {
+    text-align: center;
+    font-size: 2.5em;
+  }
+
+  h2.myJob {
+    text-align: center;
+    font-size: 2.2em;
+  }
+
+  p.myDesc {
+    text-align: center;
+  }
+
+  p.myDonations {
+    text-align: center;
+  }
+
+  /* social icons */
+
+  .inline {
+    margin-bottom: 30px;
+    padding: 15px 0;
+  }
+
+  .social {
+    justify-content: center;
+    margin-left: 15px;
+    padding: 0;
+  }
+
+  .social img {
+    vertical-align: middle;
+    margin: 4px 10px 0px 10px;
+    width: 30px;
+    height: 100%;
+  }
+
+  /* about */
+
+  .about {
+    margin-top: 30px;
+    padding: 5% 7.5%;
+  }
+
+  .about .me {
+    display: block;
+    padding: 15px 0 0 0;
+  }
+
+  .about .me .longDesc {
+    margin: 0;
+    padding: 0;
+  }
+
+  .about .me .myPic {
+    margin: 30px 0 10px 0;
+    padding: 0;
+    text-align: center;
+  }
+
+  .about .me .myPic img {
+    width: 250px;
+    height: 100%;
+  }
+
+  .techSkills {
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+  }
+
+  .techSkills li {
+    margin: 10px 15px 0 auto;
+  }
+
+  .techSkills li:last-child { margin-right: 0; }
+
+  .techSkills li img {
+    width: 40px;
+    filter: brightness(180%);
+  }
+
+  /* experience */
+
+  .experience {
+    padding: 5% 7.5%;
+  }
+
+  .experience .timeline {
+    padding: 10px 0;
+  }
+
+  .experience .card h4 {
+    font-size: 1.5em;
+  }
+
+  /* contact */
+
+  .contact {
+    padding: 5% 7.5%;
+  }
+
+  .contact .contactForm {
+    padding: 10px 0;
+  }
+
+  .contact .contactForm .whyContact p {
+    width: 100%;
+    min-width: 260px;
+    font-size: 0.9em;
+  }
+
+  .contact .contactForm form textarea {
+    min-width: 250px;
+  }
+
+  /* footer */
+
+  .allContact {
+    padding: 3% 2%;
+  }
+
+  .allContact p {
+    font-size: 0.8em;
+  }
 
 }
 
 /* ! smartphones (portrait and landscape) */  
 
 @media only screen   
-and (min-device-width : 320px) and (max-device-width : 480px) {
+and (min-width : 320px) and (max-width : 480px) {
 
   /* general */
 
