--- a/main.css
+++ b/main.css
@@ -199,7 +199,6 @@ nav ul.right>li>i {
 h1.myName {
   margin: 15px 0;
   color: #B8B8B8;
-  width: fit-content;
   transition: ease 0.3s;
 }
 
@@ -213,7 +212,6 @@ h1.myName:hover {
 h2.myJob {
   margin: 15px 0;
   color: #707070;
-  width: fit-content;
 }
 
 p.myDesc {
@@ -414,6 +412,7 @@ p.myDonations {
   font-size: 16px;
   line-height: 25px;
   width: 80%;
+  min-width: 250px;
 }
 
 ::placeholder {
