pre ~ 03.02.22 @ 11:25AM | [Landing Viewport Height Adjustments] - Only sections I want seen on load will appear, scroll to see more content as intended previously for all devices]

--- a/main.css
+++ b/main.css
@@ -184,8 +184,13 @@ nav ul.right>li>i {
 /* head */
 
 .head {
+  height: 100vh;
+}
+
+main.landing {
   margin-top: 120px;
-  padding: 5.5% 12%;
+  position: relative;
+  padding: 7.5% 12%;
 }
 
 .head [role="doc-subtitle"] {
@@ -232,8 +237,11 @@ p.myDonations {
 /* social icons */
 
 .inline {
-  padding: 25px 0;
-
+  position: absolute;
+  width: 100%;
+  right: 0;
+  bottom: 0;
+  padding: 20px 0;
 }
 
 .social {
