--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -43,7 +43,7 @@
 
   .head {
     width: 100%;
-    padding: 31% 12%;
+    padding: 8% 12%;
   }
 
   /* about */
@@ -139,8 +139,7 @@
   /* head */
 
   .head {
-    margin-top: 80px;
-    padding: 7.5%;
+    padding: 5% 7.5%;
   }
 
   .head [role="doc-subtitle"] {
@@ -310,8 +309,7 @@ and (min-width : 320px) and (max-width : 480px) {
   /* head */
 
   .head {
-    margin-top: 80px;
-    padding: 5% 7.5% 10% 7.5%;
+    padding: 0 2%;
   }
 
   .head [role="doc-subtitle"] {
