pre ~ 03.02.22  @ 11:47AM | [adding TypeWriter blinker animation]

--- a/assets/css/animate.css
+++ b/assets/css/animate.css
@@ -39,3 +39,16 @@
     transform: translateY(-5px);
   }
 }
+
+/* blink */
+
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+@-webkit-keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
