--- a/main.css
+++ b/main.css
@@ -219,8 +219,10 @@ h2.myJob {
   color: #707070;
 }
 
-span#typewriter {
+span.blink {
   border-right: 2px solid #707070;
+  animation: blink-animation 1s steps(5, start) infinite;
+  -webkit-animation: blink-animation 1s steps(5, start) infinite;
 }
 
 p.myDesc {
