--- a/main.css
+++ b/main.css
@@ -15,9 +15,9 @@
 
 html,
 body {
-  background: rgb(40,40,40);
-  background: linear-gradient(90deg, rgba(40,40,40,1) 0%, rgba(51,51,51,1) 50%, rgba(40,40,40,1) 100%);
-  font-family: Sora, Helvetica, Arial, sans-serif;
+  background-color: #282828;
+  background: url(/assets/img/bg.svg);
+  background-attachment: fixed;
   color: #707070;
 }
 
@@ -113,8 +113,8 @@ a.outLink::after {
   z-index: 9999;
   width: 100%;
   overflow: hidden;
-  background: rgb(40,40,40);
-  background: linear-gradient(90deg, rgba(40,40,40,1) 0%, rgba(51,51,51,1) 50%, rgba(40,40,40,1) 100%);
+  background: #282828;
+  background: url(/assets/img/bg.svg);
 }
 
 nav ul {
