--- a/assets/css/animate.css
+++ b/assets/css/animate.css
@@ -1,45 +1,3 @@
-/* bounce */
-
-@-webkit-keyframes bounce {
-  0%,  
-  100% {
-    -webkit-transform: translateY(0);
-  } 
-  50% {
-    -webkit-transform: translateY(-5px);
-  }
-}
-
-@-moz-keyframes bounce {
-  0%, 
-  100% {
-    -moz-transform: translateY(0);
-  }
-  50% {
-    -moz-transform: translateY(-5px);
-  }
-}
-
-@-o-keyframes bounce {
-  0%,
-  100% {
-    -o-transform: translateY(0);
-  }
-  50% {
-    -o-transform: translateY(-5px);
-  }
-}
-
-@keyframes bounce {
-  0%,  
-  100% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(-5px);
-  }
-}
-
 /* blink */
 
 @keyframes blink-animation {
@@ -50,5 +8,25 @@
 @-webkit-keyframes blink-animation {
   to {
     visibility: hidden;
+  }
+}
+
+/* tremble */
+
+@keyframes tremble {
+  10%, 20% {
+    transform: translate3d(-0.5px, 0, 0);
+  }
+  
+  11%, 19% {
+    transform: translate3d(1px, 0, 0);
+  }
+
+  13%, 15%, 17% {
+    transform: translate3d(-2px, 0, 0);
+  }
+
+  14%, 16% {
+    transform: translate3d(2px, 0, 0);
   }
 }
