--- a/assets/css/animate.css
+++ b/assets/css/animate.css
@@ -1,3 +1,74 @@
+/* Background Gradient Switch */
+
+@keyframes bgGradientSwitch {
+  0% {
+    background-position:0% 50%
+  }
+
+  50% {
+    background-position:100% 50%
+  }
+
+  100% {
+    background-position:0% 50%
+  }
+}
+
+@-webkit-keyframes bgGradientSwitch {
+  0% {
+    background-position:0% 50%
+  }
+
+  50% {
+    background-position:100% 50%
+  }
+
+  100% {
+    background-position:0% 50%
+  }
+}
+
+@-moz-keyframes bgGradientSwitch {
+  0% {
+    background-position:0% 50%
+  }
+
+  50% {
+    background-position:100% 50%
+  }
+
+  100% {background-position:0% 50%
+  }
+}
+
+@-o-keyframes bgGradientSwitch {
+  0% {
+    background-position:0% 50%
+  }
+
+  50% {
+    background-position:100% 50%
+  }
+
+  100% {
+    background-position:0% 50%
+  }
+}
+
+@keyframes bgGradientSwitch {
+  0% {
+    background-position:0% 50%
+  }
+
+  50% {
+    background-position:100% 50%
+  }
+
+  100% {
+    background-position:0% 50%
+  }
+}
+
 /* blink */
 
 @keyframes blink-animation {
