--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -128,7 +128,7 @@
 
   /* nav menu */
 
-  nav ul.left img {
+  nav ul.left svg {
     margin: 5px 5px -1.8px 5px;
   }
 
@@ -298,8 +298,12 @@ and (min-width : 320px) and (max-width : 480px) {
 
   /* nav menu */
 
-  nav ul.left img {
+  nav ul.left svg {
     margin: 5px 5px -1.8px 5px;
+  }
+
+  nav ul>li {
+    padding: 5px;
   }
 
   nav ul.right {
@@ -468,4 +472,19 @@ and (min-width : 320px) and (max-width : 480px) {
 /* ! iPhone 4 */  
 @media only screen and (-webkit-min-device-pixel-ratio:1.5), only screen and (min-device-pixel-ratio:1.5) {  
     
+}
+
+@media only screen   
+and (min-width : 320px) and (max-width : 480px) and (max-height : 615px) {
+  nav ul>li {
+    padding: 0px;
+  }
+
+  .optional {
+    display: none;
+  }
+
+  main.landing {
+    margin-top: 45px;
+  }
 }
