[Bug Fix] - Safari does not render backdrop-filter correctly, seeing if webkit fixes this issue

--- a/main.css
+++ b/main.css
@@ -139,6 +139,7 @@ a.outLink::after {
   width: 100%;
   overflow: hidden;
   backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
 }
 
 nav ul {
